<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_today_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="13dp"
        android:paddingBottom="16dp"
        android:text="@string/today_title"
        android:textColor="@color/color_212121"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/car"
                android:textColor="@color/color_ececec"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_car_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/dp_3"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/cold"
                android:textColor="@color/color_ececec"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_cold_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/dp_3"
                android:gravity="center"
                android:text=""

                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/comfortable"
                android:textColor="@color/color_ececec"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_comfortable_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/dp_3"
                android:gravity="center"
                android:text=""

                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/dressing"
                android:textColor="@color/color_ececec"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_dressing_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/dp_3"
                android:gravity="center"
                android:text=""

                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/ultraviolet"
                android:textColor="@color/color_ececec"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_ultraviolet_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/dp_3"
                android:gravity="center"
                android:text=""

                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/hum"
                android:textColor="@color/color_ececec"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_hum_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/dp_3"
                android:gravity="center"
                android:text=""

                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/pressure"
                android:textColor="@color/color_ececec"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_pressure_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/dp_3"
                android:gravity="center"
                android:text=""

                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/visible"
                android:textColor="@color/color_ececec"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_visible_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/dp_3"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:background="@color/color_ececec" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/air_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/air_quality"
            android:textColor="@color/black"
            android:textSize="12sp" />


    </RelativeLayout>

    <GridLayout
        android:id="@+id/grid_air"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:columnCount="1"
        android:rowCount="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_pm25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/pm2_5"
                    android:textColor="@color/color_ececec"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_today_pm25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/tv_pm25"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_pm10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/pm10"
                    android:textColor="@color/color_ececec"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_today_pm10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/tv_pm10"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_so2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/so2"
                    android:textColor="@color/color_ececec"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_today_so2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/tv_so2"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_no2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/no2"
                    android:textColor="@color/color_ececec"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_today_no2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/tv_no2"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_co"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/co"
                    android:textColor="@color/color_ececec"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_today_co"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/tv_co"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_o3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/o3"
                    android:textColor="@color/color_ececec"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_today_o3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/tv_o3"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>
        </LinearLayout>


    </GridLayout>


    <TextView
        android:id="@+id/tv_sun_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="日出日落"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">


        <com.juyou.calendar.weather.horizonview.SunView
            android:id="@+id/sun_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_150"
            android:layout_weight="1"
            app:sun_circle_color="@color/sun_light_circle"
            app:sun_circle_radius="70"
            app:sun_font_color="@color/color_ececec"
            app:sun_font_size="12px" />


    </LinearLayout>


    <TextView
        android:id="@+id/tv_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_white"
        android:gravity="center_vertical|end"
        android:text="数据来源彩云科技"
        android:textColor="@color/textcoloe3"
        android:textSize="10sp"
        tools:ignore="RtlSymmetry" />


</merge>